feat: gc collector parameter learn note and nginx remote client request information